--- a/frontend/chan_frontend/package.json
+++ b/frontend/chan_frontend/package.json
@@ -12,6 +12,7 @@
     "circomlibjs": "^0.1.7",
     "connectkit": "^1.5.3",
     "eth-sig-util": "^3.0.1",
+    "fs": "^0.0.1-security",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
